# local-llm-delegation-mcp

./: .env.example  .gitignore  README.md  config.py  config.yaml  prompts.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  server.py  show_stats.py
